fixed gap at bottom

--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ h2, h1{
 
 .content-container {
   background-color: #919191;
-  height: 90vh;
+  height: 100vh;
   width: 100vw;
 }
 .navbar-placeholder {
